fixed some spacing between photos and the tech stack

--- a/src/components/containers/about-pic/AboutPicContainer.css
+++ b/src/components/containers/about-pic/AboutPicContainer.css
@@ -5,7 +5,7 @@
   justify-content: space-around;
   align-items: center;
   margin-top: 2vw;
-  margin-bottom: 6vw;
+  margin-bottom: 8vw;
   margin-left: .1vw;
 }
 
